# steel-plugin

./: .gitignore  CONVENTION.md  Cargo.toml  README.md  globals.luau  justfile
examples/: template.luau
examples/consumer-plugin/: Cargo.toml
examples/consumer-plugin/src/: lib.rs
examples/listening-plugin/: Cargo.toml
examples/listening-plugin/src/: lib.rs
examples/provider-plugin/: Cargo.toml
examples/provider-plugin/src/: lib.rs
src/: lib.rs  logger.rs  signal.rs
steel-host/: Cargo.toml
steel-host/src/: container.rs  error.rs  event.rs  event_registry.rs  exports.rs  instance.rs  lib.rs  linker.rs  loader.rs  main.rs  manager.rs  meta.rs  plugin.rs  state.rs  topological_sort.rs  utils.rs
steel-host/src/event/: handler.rs  mod.rs  topic.rs
steel-host/src/linker/: event.rs  mod.rs  objects.rs  rpc.rs
steel-host/src/objects/: demo_player.rs  mod.rs  player.rs
steel-host/src/plugin/: exports.rs  mod.rs
steel-host/src/rpc/: host.rs  mod.rs  plugin.rs
steel-host/src/utils/: discover.rs  memory.rs  mod.rs  sorting.rs
steel-plugin/: Cargo.toml
steel-plugin-core/: Cargo.toml
steel-plugin-core/src/: lib.rs
steel-plugin-macros/: Cargo.toml
steel-plugin-macros/src/: args.rs  lib.rs  rules.rs
steel-plugin-macros/src/macros/: derive_event.rs  event_handler.rs  mod.rs  on_disable.rs  on_enable.rs  plugin_meta.rs  rpc_export.rs
steel-plugin-macros/src/utils/: args.rs  mod.rs
steel-plugin-sdk/: Cargo.toml
steel-plugin-sdk/src/: event.rs  export.rs  lib.rs  rpc.rs  types.rs  utils.rs
steel-plugin-sdk/src/event/: handler.rs  mod.rs  result.rs
steel-plugin-sdk/src/objects/: batch.rs  mod.rs  player.rs  query.rs
steel-plugin-sdk/src/rpc/: mod.rs
steel-plugin-sdk/src/utils/: fat.rs
steel-plugin/src/: lib.rs
