[workspace]
members = [
    "steel-plugin",
    "steel-plugin-sdk"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Alvsch"]

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.profiling]
inherits = "release"
debug = true

[workspace.dependencies]
steel-core = { git = "https://github.com/Steel-Foundation/SteelMC" }
steel-utils = { git = "https://github.com/Steel-Foundation/SteelMC" }

# Logging
tracing = "0.1.44"

[workspace.lints.rust]
# TODO: change to warn
missing_docs = "allow"

[workspace.lints.clippy]
single_call_fn = "allow"
multiple_inherent_impl = "allow"
shadow_unrelated = "allow"
missing_errors_doc = "allow"
struct_excessive_bools = "allow"
needless_pass_by_value = "allow"
cargo_common_metadata = "allow"
cast_sign_loss = "allow"
cast_possible_wrap = "allow"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
absolute_paths = "warn"
missing_const_for_fn = "warn"

all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -2 }
unwrap_used = { level = "warn", priority = -3 }
