[workspace]
members = [
    "steel-host",
    "steel-plugin-macros",
    "steel-plugin-sdk",
    "examples/consumer-plugin",
    "examples/provider-plugin",
    "examples/listening-plugin",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Alvsch"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.profiling]
inherits = "release"
debug = true

[workspace.dependencies]
steel-plugin-sdk = { path = "steel-plugin-sdk" }
steel-plugin-macros = { path = "steel-plugin-macros" }

steel-core = { git = "https://github.com/Steel-Foundation/SteelMC" }
steel-utils = { git = "https://github.com/Steel-Foundation/SteelMC" }

tokio = { version = "1.50.0", features = ["macros", "rt", "rt-multi-thread", "fs"] }

wasmtime = { version = "43.0.0", default-features = false }
wasmtime-wasi = "43.0.0"
wasmparser = { version ="0.245.1", default-features = false }

serde = { version = "1.0.228", features = ["derive"] }
rmp-serde = "1.3.1"
rmp = "0.8.15"
thiserror = "2.0.18"
uuid = { version = "1.22.0", features = ["serde", "v4"] }

# proc macro
syn = "2.0.117"
quote = "1.0.45"

# Logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[workspace.lints.rust]
# TODO: change to warn
missing_docs = "allow"

[workspace.lints.clippy]
single_call_fn = "allow"
multiple_inherent_impl = "allow"
shadow_unrelated = "allow"
missing_errors_doc = "allow"
struct_excessive_bools = "allow"
needless_pass_by_value = "allow"
cargo_common_metadata = "allow"
cast_sign_loss = "allow"
cast_possible_wrap = "allow"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
absolute_paths = "warn"
missing_const_for_fn = "warn"
# TOOD: remove
missing_panics_doc = "allow"

all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -2 }
# TODO: change to warn
unwrap_used = { level = "allow", priority = -3 }
