[package]
name = "steel-host"
version.workspace = true
edition.workspace = true
authors.workspace = true

[features]
profiler = [
    "wasmtime/profiling",
    "wasmtime/demangle",
]

[dependencies]
steel-plugin-sdk.workspace = true
steel-plugin-core.workspace = true
tokio.workspace = true

wasmtime = { workspace = true, features = [
    "cranelift",
    "async",
    "pooling-allocator",
    "parallel-compilation",
    "runtime",
    "std",
] }
wasmtime-wasi = { workspace = true, features = ["p1"] }
wasmparser = { workspace = true, features = ["std", "simd"] }

serde.workspace = true
rmp-serde.workspace = true
semver.workspace = true
uuid.workspace = true

thiserror.workspace = true
anyhow.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true