[package]
name = "steel-host"
version.workspace = true
edition.workspace = true
authors.workspace = true

[features]
profiler = [
    "wasmtime/profiling",
    "wasmtime/demangle",
]

[dependencies]
steel-plugin-sdk.workspace = true
steel-plugin-core.workspace = true
steel-core.workspace = true
steel-utils.workspace = true
tokio.workspace = true

wasmtime = { workspace = true, features = [
    "cranelift",
    "async",
    "pooling-allocator",
    "parallel-compilation",
    "runtime",
    "std",
] }
wasmtime-wasi.workspace = true
wasmparser = { workspace = true, features = ["std", "simd"] }

serde.workspace = true
rmp-serde.workspace = true
rmp.workspace = true
semver.workspace = true
slotmap.workspace = true
glam.workspace = true

thiserror.workspace = true
anyhow.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true
uuid = { version = "1.22.0", features = ["v4"] }

[lints]
workspace = true