[package]
name = "steel-plugin-macros"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
serde.workspace = true
rmp-serde.workspace = true

[lints]
workspace = true
