[package]
name = "steel-plugin-macros"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true, features = ["full"] }
proc-macro2.workspace = true
quote.workspace = true
rmp.workspace = true

[lints]
workspace = true
