[package]
name = "steel-plugin-sdk"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
steel-plugin-macros.workspace = true
serde.workspace = true
rmp-serde.workspace = true
bitflags = { workspace = true, features = ["serde"] }
uuid.workspace = true
strum.workspace = true

[lints]
workspace = true
