[package]
name = "steel-plugin-sdk"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
steel-plugin-macros.workspace = true
steel-plugin-core.workspace = true

serde.workspace = true
rmp-serde.workspace = true
uuid.workspace = true
inventory.workspace = true
glam.workspace = true
slotmap.workspace = true

[lints]
workspace = true
