[package]
name = "steel-plugin"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
steel-plugin-sdk.workspace = true
rmp-serde.workspace = true
uuid = { workspace = true, features = ["v4"] }
serde = { workspace = true, features = ["derive"] }
